Improving code readability and bug fixing and css work

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,11 +8,12 @@ body
 
 h1  
 {
-    padding:20px;
-    margin-bottom: 500px;
+    padding-top: 20px;
     text-align: start;
-    width: 94%;
-    background-color: yellow;
+    font-size: 60px;
+    width: 100%;
+    background-color: rgb(75, 102, 170);
+    border-radius: 25px;
 }
 
 h2
@@ -48,5 +49,6 @@ h2
 
 img
 {
+    margin-left: 10px;
     width: 120px;
 }
